fix scrollbar issue on see-all page

--- a/src/pages/home/homeComponents/homeTopics/HomeTopicsSeeAll.scss
+++ b/src/pages/home/homeComponents/homeTopics/HomeTopicsSeeAll.scss
@@ -8,8 +8,6 @@ $desktop-item-height: 290px;
     @include limitContent;
 
     padding: 0 20px 20px;
-    height: 100vh;
-    overflow: auto;
 
     .topicsSeeAll-body {
         @include desktop {
